<resources>
    <string name="app_name">Who is Khamidjon</string>
    <string name="my_full_name">Khamidjon\nKhamidov</string>
    <string name="about_me">About me</string>
    <string name="skills">Skills</string>
    <string name="personal_projects">Personal Projects</string>
    <string name="source_code">Source Code</string>
    <string name="contact_me">Contact me</string>
    <string name="about_app">About App</string>
    <string name="exit">Exit</string>
    <string name="personal_posts">Personal Posts</string>
    <string name="work_smart_amp_hard"><![CDATA[Work Smart&Hard!]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name:</string>
    <string name="khamidjon_khamidov">Khamidjon Khamidov</string>
    <string name="age">Birth date:</string>
    <string name="my_birth_date">September 14, 1998</string>
    <string name="experience">Experience:</string>
    <string name="loading">Loading…</string>
    <string name="hobbies">Hobbies:</string>
    <string name="chess_and_table_tennis">Chess and Table tennis</string>
    <string name="education">Education:</string>
    <string name="tuit"><u>TUIT</u></string>
    <string name="lsbu"><u>LSBU</u></string>
    <string name="and">and</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone number:</string>
    <string name="email">Email:</string>
    <string name="my_higher_education">My Higher Education</string>
    <string name="subjects">Subjects:</string>
    <string name="scores">Scores:</string>
    <string name="send_message">Send Message</string>
    <string name="send_email">Send Email</string>
    <string name="give_me_a_call">Give Me A Call</string>
    <string name="back_arrow">back arrow</string>
    <string name="see_more">See more</string>
    <string name="image">Image</string>
    <string name="sorry_content_unavailable_for_know">Sorry, content unavailable for know!</string>
    <string name="show_more_1">This is my last application in which you can find info about me. For this app, I used a lot of features of android as well as clean architecture code to load data from internet and save it to database cache memory. It also uses other latest features like navigation components and dagger2, MVI architecture and so on.</string>
    <string name="show_more_2">Calculator Vault is used to save your data secretly from others. One interesting feature of it is that any group of data can be saved with different passcodes. In this app, I used different kinds of animation to attract users. I also used fingerprint authentication.</string>
    <string name="calculator_photovault">Calculator PhotoVault</string>
    <string name="show_more_3">This is my memorable app as it is the first mobile real-world app ever. Although I don\'t use many features of app development, when I published I got more than 1000 downloads. In this app, I just used simple features like webview</string>
    <string name="english_uzbek_dictionary">English-Uzbek Dictionary</string>
    <string name="go_to_app">Go to App</string>
    <string name="home">Home</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="not_deleted">Unfortunately, as this api is fake, it hasn\'t been deleted in our servers. This is for design purposes only!</string>
    <string name="not_created">Bear in mind that this post hasn\'t originally been created in the database and server as this api is fake. Sorry for the inconvenience!</string>
</resources>
