<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_image_background"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/profile_img_src"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            android:text="@string/my_full_name"
            android:layout_marginStart="10dp"
            android:maxLines="2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>


<!--    menu starts from here-->

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/light_blue_background"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/menu_item_about_me"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/about_me_img"/>

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_item_skills"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/skills_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/skills"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/menu_item_personal_projects"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/personal_projects_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/personal_projects"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/menu_item_source_code"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/source_code_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/source_code"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/menu_item_about_app"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/this_app_specs_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/about_app"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/menu_item_personal_posts"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/personal_posts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/personal_posts"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/menu_item_contact"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/contact_me_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/contact_me"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

        <androidx.cardview.widget.CardView

            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/menu_item_exit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/exit_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/exit"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>


























